# dsi-dsp

./: .gitignore  .lintr  LICENSE  README.md  pyproject.toml
data/: indices.csv
data/processed/: master_data.csv
data/raw/: DJI.csv  GDAXI.csv  GSPC.csv  HSI.csv  IXIC.csv  N225.csv  NSEI.csv  Tweets 12-6-24.csv  VIX.csv  indices.csv  indices.xlsx
docs/: PROJECT STOCK MARKET ANALYTICS-PHASES.docx
docs/background/: 02 Credit Scoring.pptx  03 Financial Markets.pptx  04 Marketing Analytics.pptx  05 HR Analytics.pptx  Credit Scoring.pptx  Global Markets.pptx  HR Analytics.pptx  Marketing Analytics.pptx
docs/guidelines/: Project Discussion.pptx  Project Guidelines.pptx
docs/phases/: PROJECT - STOCK MARKET ANALYTICS - PHASE 1.docx  PROJECT - STOCK MARKET ANALYTICS - PHASE 2.docx  PROJECT - STOCK MARKET ANALYTICS - PHASE 4.docx
notebooks/: report.ipynb
output/phase_01/: research_04.txt
output/phase_02/: research_02.txt  research_07.txt  research_10.txt  research_11.txt  research_12.txt  research_13.txt
presentation/: presentation.html  presentation.qmd
report/: report.ipynb  report.py
research/scripts/: research_01.py  research_02.py  research_03.py  research_06.py
scripts/: research_01.py  research_02.py  research_03.py  research_04.5.py  research_04.py  research_05.py  research_06.py  research_07.py
scripts/phase_01/: research_00.py  research_02.py  research_03.py  research_04.py  research_05.py  research_05.txt  research_06.py
scripts/phase_02/: research_00.py  research_01.py  research_02.py  research_02.txt  research_03.py  research_04.py  research_05.py  research_06.py  research_07.py  research_07.txt  research_08.py  research_09.py  research_09.txt  research_10.py
scripts/phases/: phase_01.py  phase_02.py  phase_03.py  phase_04.py  phase_05.py
scripts/research/phase_01/: research_00.py  research_01.py  research_02.py  research_03.py  research_04.py  research_05.py  research_06.py
scripts/research/phase_02/: research_01.py  research_02.py  research_03.py  research_04.py  research_05.py  research_06.py  research_07.py  research_08.py  research_09.py  research_10.py  research_11.py  research_12.py  research_13.py
scripts/research/phase_03/: research_01.py  research_02.py  research_03.py  research_04.py  research_05.py  research_06.py  research_07.py  research_08.py  research_09.py  research_10.py  research_11.py  research_12.py  research_13.py  research_14.py  research_15.py
scripts/research/phase_04/: research_01.py  research_02.py  research_03.py  research_04.py  research_05.py  research_06.py  research_07.py  research_12.py  research_13.py  research_14.py  research_15.py  research_16.py  research_17.py  research_21.py  research_22.py
scripts/research/phase_05/: research_01.py  research_02.py  research_03.py  research_04.py
src/cowboysmall/data/: master.py
src/cowboysmall/feature/: __init__.py  indicators.py
src/cowboysmall/model/: imbalance.py  logit.py  training.py
src/cowboysmall/plots/: plt.py  sms.py  sns.py
src/cowboysmall/si/: tests.py
src/gsma/: __about__.py  __init__.py
src/gsma/data/: file.py  index.py  index_data.py  master.py
src/gsma/feature/: indicators.py
src/gsma/files/: master.py
src/gsma/model/: logit.py
src/gsma/plots/: plots.py  plt.py  sns.py
src/gsma/si/: tests.py
