[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"





[project]
name = "dsi-dsp"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Jerry Kiely", email = "jerry@cowboysmall.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "seaborn",

  "statsmodels",
  "scikit-learn",
  "imbalanced-learn",
  # "torch",
  # "torchvision",
  # "torchaudio",

  "nltk",
  "wordcloud",

  "yfinance",
  "pandas-datareader",
  "mplfinance",
  "ta",
  "pandas-ta",

  "ipykernel",
  "pyasyncore",
  "pyasynchat",
    # "spyder-kernels",
  "spyder-kernels==3.0.0b5",
]

[project.urls]
Documentation = "https://github.com/cowboysmall-research/dsi-dsp#readme"
Issues = "https://github.com/cowboysmall-research/dsi-dsp/issues"
Source = "https://github.com/cowboysmall-research/dsi-dsp"






[tool.hatch.build.targets.wheel]
packages = ["src/cowboysmall"]

[tool.hatch.version]
path = "src/cowboysmall/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]


# [tool.hatch.envs.default.env-vars]
# PIP_INDEX_URL = "https://download.pytorch.org/whl/cpu"
# PIP_INDEX_URL = "https://download.pytorch.org/whl/cu118"
# PIP_INDEX_URL = "https://download.pytorch.org/whl/rocm6.0"


[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/cowboysmall tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]





[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true





[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["cowboysmall"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]





[tool.coverage.run]
source_pkgs = ["cowboysmall", "tests"]
branch = true
parallel = true
omit = [
  "src/cowboysmall/__about__.py",
]

[tool.coverage.paths]
cowboysmall = ["src/cowboysmall", "*/dsi-dsp/src/cowboysmall"]
tests = ["tests", "*/dsi-dsp/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
